[package]
name = "w5500-issue-252"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
fugit = "0.3.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-boot2 = "0.3"
rp2040-hal = { version="0.8", features=["rt", "critical-section-impl"] }
w5500-hl = { version = "0.9.0", features = ["embedded-hal"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1 # this has to be <= 1
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3 # overriding the opt-level for all dependencies works fine
